--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "write-file-atomic": "^6.0.0"
   },
   "devDependencies": {
     "@electron/packager": "^18.3.2",
